--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@ input::-webkit-input-placeholder {
                             </a>
                         </div>
                         <div class="col-md-3 col-sm-4 col-xs-6">
-                            <a href="/https/www.youtube.com/channel/UCAq_xQV8pJ2Q_KOszzaYPBg/feed?disable_polymer=1" class="card-link" target="_blank">
+                            <a href="/https/www.youtube.com/" class="card-link" target="_blank">
                             <div class="card-tit">YouTube</div>
                             </a>
                         </div>
@@ -793,8 +793,8 @@ input::-webkit-input-placeholder {
                             </a>
                         </div>
                         <div class="col-md-3 col-sm-4 col-xs-6">
-                            <a href="/https/telegram.org/dl/android/apk" class="card-link" target="_blank">
-                            <div class="card-tit">Telegram下载</div>
+                            <a href="/https/" class="card-link" target="_blank">
+                            <div class="card-tit">Daum</div>
                             </a>
                         </div>
                         <div class="col-md-3 col-sm-4 col-xs-6">
