--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@ input::-webkit-input-placeholder {
                         </div>
                         <div class="col-md-3 col-sm-4 col-xs-6">
                             <a href="/https/t.me/s/socks5list" class="card-link" target="_blank">
-                            <div class="card-tit">Telegram代理</div>
+                            <div class="card-tit">Daum</div>
                             </a>
                         </div>
                     </div>
